--- a/style.css
+++ b/style.css
@@ -7,17 +7,17 @@
 
 body {
     background-color: #e3f9ff;
-    width:90%;
-    height:90%;
 }
 
 .container {
     margin-top: 30px;
     width: 100%;
+    height:80%;
     height: vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin:auto;
 }
 
 .calculator {
