--- a/style.css
+++ b/style.css
@@ -60,3 +60,9 @@ form input .equal {
 form input.operator {
     color: #33ffd8;
 }
+@media screen and (min-width:300px;){
+    input{
+    width:20%;
+    }
+}
+
