--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body {
 .calculator form input {
     border: 0;
     outline: 0;
-    width: 60px;
-    height: 60px;
+    width: 15%;
+    height: 10%;
     border-radius: 10px;
     box-shadow: -8px -8px 25px rgb(255, 255, 255, 0.1), 5px 5px 15px rgb(0, 0, 0, 0.2);
     background: transparent;
